[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/Button/UP.png" type="Texture" id=1]
[ext_resource path="res://asset/Button/LEFT.png" type="Texture" id=2]
[ext_resource path="res://asset/Button/RIGHT.png" type="Texture" id=3]
[ext_resource path="res://MobileControl.gd" type="Script" id=4]

[node name="Mobile_Control" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="upbutton" type="TouchScreenButton" parent="."]
position = Vector2( 516, 185 )
scale = Vector2( 0.132813, 0.117188 )
normal = ExtResource( 1 )
pressed = ExtResource( 1 )
action = "lompat"

[node name="leftbutton" type="TouchScreenButton" parent="."]
position = Vector2( 468, 229 )
scale = Vector2( 0.123047, 0.169922 )
normal = ExtResource( 2 )
pressed = ExtResource( 2 )
action = "gerak_kiri"

[node name="rightbutton" type="TouchScreenButton" parent="."]
position = Vector2( 572, 238 )
scale = Vector2( 0.117187, 0.134766 )
normal = ExtResource( 3 )
pressed = ExtResource( 3 )
action = "gerak_kanan"

[connection signal="pressed" from="upbutton" to="." method="_on_upbutton_pressed"]
[connection signal="released" from="upbutton" to="." method="_on_upbutton_released"]
[connection signal="pressed" from="leftbutton" to="." method="_on_leftbutton_pressed"]
[connection signal="released" from="leftbutton" to="." method="_on_leftbutton_released"]
[connection signal="pressed" from="rightbutton" to="." method="_on_rightbutton_pressed"]
[connection signal="released" from="rightbutton" to="." method="_on_rightbutton_released"]
